--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     <meta name="description" content="First Vue">
     <meta name="author" content="FatherGodHz">
     <link rel="stylesheet" href="static/css/reset.css">
-    <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script>
-    <title>changpaiwap</title>
+    <!--<script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script>-->
+    <script src="static/js/flexible.js"></script>
+    <title>法官平台</title>
   </head>
   <body>
     <div id="app"></div>
